--- a/Concept/concept.html
+++ b/Concept/concept.html
@@ -226,49 +226,47 @@
                 <div class="col-md-6">
                     <div class="card hvr-forward">
                         <img src="attetarkiainencom.jpg" class="card-img" alt="www.attetarkiainen.com">
-                        <div class="card-img-overlay">
-                            <h5 class="card-title">ATTETARKIAINEN.COM</h5>                            
-                            <p class="card-text">HTML | CSS | JQUERY</p>
-                            <a href="https://github.com/atteilari/" hreflang="en" target="_blank" title="GitHub"><p class="fab fa-github fa-2x px-4"></p></a>
-                        </div>
+                        <a href="https://github.com/atteilari/attetarkiainen.com" hreflang="en" target="_blank" title="www.attetarkiainen.com project on GitHub">
+                            <div class="card-img-overlay">
+                                <h5 class="card-title">ATTETARKIAINEN.COM</h5>
+                                <h6 class="card-title">HTML | CSS | JQUERY</h6>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="card hvr-backward">
-                        <img src="somestailausfi.jpg" class="card-img" alt="www.somestailaus.fi">
-                        <div class="card-img-overlay">
-                            <h5 class="card-title">SOMESTAILAUS.FI</h5>                            
-                            <p class="card-text">HTML | CSS | JQUERY</p>
-                            <div class="spinner-border" role="status">
-                                <span class="visually-hidden">Loading...</span>
-                            </div>                        
-                        </div>
+                    <div class="card hvr-forward">
+                        <img src="attetarkiainencom.jpg" class="card-img" alt="www.attetarkiainen.com">
+                        <a href="https://github.com/atteilari/attetarkiainen.com" hreflang="en" target="_blank" title="www.attetarkiainen.com project on GitHub">
+                            <div class="card-img-overlay">
+                                <h5 class="card-title">ATTETARKIAINEN.COM</h5>
+                                <h6 class="card-title">HTML | CSS | JQUERY</h6>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <div class="card hvr-forward">
-                        <img src="contactbookpython.jpg" class="card-img" alt="Python Project - Contact Book">
-                        <div class="card-img-overlay">
-                            <h5 class="card-title">CONTACT-BOOK.EXE</h5>                            
-                            <p class="card-text">PYTHON | TKINTER | SMTPLIB | SQLITE3</p>
-                            <div class="spinner-border" role="status">
-                                <span class="visually-hidden">Loading...</span>
-                            </div>                        
-                        </div>
+                        <img src="attetarkiainencom.jpg" class="card-img" alt="www.attetarkiainen.com">
+                        <a href="https://github.com/atteilari/attetarkiainen.com" hreflang="en" target="_blank" title="www.attetarkiainen.com project on GitHub">
+                            <div class="card-img-overlay">
+                                <h5 class="card-title">ATTETARKIAINEN.COM</h5>
+                                <h6 class="card-title">HTML | CSS | JQUERY</h6>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="card hvr-backward">
-                        <img src="banner.jpg" class="card-img" alt="To be announced">
-                        <div class="card-img-overlay">
-                            <h5 class="card-title">TO BE ANNOUNCED</h5>                            
-                            <p class="card-text">JAVA</p>
-                            <div class="spinner-border" role="status">
-                                <span class="visually-hidden">Loading...</span>
-                            </div>  
-                        </div>
+                    <div class="card hvr-forward">
+                        <img src="attetarkiainencom.jpg" class="card-img" alt="www.attetarkiainen.com">
+                        <a href="https://github.com/atteilari/attetarkiainen.com" hreflang="en" target="_blank" title="www.attetarkiainen.com project on GitHub">
+                            <div class="card-img-overlay">
+                                <h5 class="card-title">ATTETARKIAINEN.COM</h5>
+                                <h6 class="card-title">HTML | CSS | JQUERY</h6>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
