--- a/Concept/concept.html
+++ b/Concept/concept.html
@@ -66,7 +66,7 @@
 
         <!-- Landing -->
         <section id="landing">
-            <img src="banner.jpg" class="banner" alt="Atte Tarkiainen">
+            <img src="banner.webp" class="banner" alt="Atte Tarkiainen">
             <div class="banner-content-left">
                 <h1>STUDENT</h1>
                 <p>First year Information Technology & Business student in the Bachelors of Business Administration program at Laurea University of Applied Sciences</p>
@@ -87,7 +87,7 @@
                 <div class="col-md">
                     <h2 style="color: #85898F;">| SKILLS |</h2>
                     <i class="fab fa-3x fa-html5" style="color: #e44c26;"></i>
-                    <p class="test">HTML5</p>
+                    <p>HTML5</p>
                     <i class="fab fa-3x fa-css3-alt" style="color: #2160aa;"></i>
                     <p>CSS3 | SCSS</p>
                     <i class="fab fa-3x fa-python" style="color: #f7bd2f;"></i>
@@ -211,7 +211,7 @@
                 <div class="col-4"></div>
             </div>
         </main>
-        <img src="drip-down.png" class="banner" alt="Ripped Paper">
+        <img src="drip-down.webp" class="banner" alt="Ripped Paper">
         <!-- End Timeline -->
 
         <!-- Projects Gallery -->
@@ -225,7 +225,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="card hvr-forward">
-                        <img src="attetarkiainencom.jpg" class="card-img" alt="www.attetarkiainen.com">
+                        <img src="attetarkiainencom.webp" class="card-img" alt="www.attetarkiainen.com">
                         <a href="https://github.com/atteilari/attetarkiainen.com" hreflang="en" target="_blank" title="www.attetarkiainen.com project on GitHub">
                             <div class="card-img-overlay">
                                 <h5 class="card-title">ATTETARKIAINEN.COM</h5>
@@ -235,36 +235,12 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="card hvr-forward">
-                        <img src="attetarkiainencom.jpg" class="card-img" alt="www.attetarkiainen.com">
-                        <a href="https://github.com/atteilari/attetarkiainen.com" hreflang="en" target="_blank" title="www.attetarkiainen.com project on GitHub">
+                    <div class="card hvr-backward">
+                        <img src="leetcode.webp" class="card-img" alt="Leetcode Coding Challenge Portfolio">
+                        <a href="https://github.com/atteilari/leetcode" hreflang="en" target="_blank" title="Leetcode Coding Challenges Portfolio on GitHub">
                             <div class="card-img-overlay">
-                                <h5 class="card-title">ATTETARKIAINEN.COM</h5>
-                                <h6 class="card-title">HTML | CSS | JQUERY</h6>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="card hvr-forward">
-                        <img src="attetarkiainencom.jpg" class="card-img" alt="www.attetarkiainen.com">
-                        <a href="https://github.com/atteilari/attetarkiainen.com" hreflang="en" target="_blank" title="www.attetarkiainen.com project on GitHub">
-                            <div class="card-img-overlay">
-                                <h5 class="card-title">ATTETARKIAINEN.COM</h5>
-                                <h6 class="card-title">HTML | CSS | JQUERY</h6>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="card hvr-forward">
-                        <img src="attetarkiainencom.jpg" class="card-img" alt="www.attetarkiainen.com">
-                        <a href="https://github.com/atteilari/attetarkiainen.com" hreflang="en" target="_blank" title="www.attetarkiainen.com project on GitHub">
-                            <div class="card-img-overlay">
-                                <h5 class="card-title">ATTETARKIAINEN.COM</h5>
-                                <h6 class="card-title">HTML | CSS | JQUERY</h6>
+                                <h5 class="card-title">LEETCODE CHALLENGES</h5>
+                                <h6 class="card-title">PYTHON | JAVA</h6>
                             </div>
                         </a>
                     </div>
@@ -275,7 +251,7 @@
 
         <!-- Footer -->
         <div style="height: 100px; background-color: white;"></div>
-        <img src="drip-up.png" class="banner" alt="Ripped Paper">
+        <img src="drip-up.webp" class="banner" alt="Ripped Paper">
         <footer class="container-fluid">
             <div class="row">
                 <div class="col-md">
